image bug was fixed, gsap animation was added

--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -40,18 +40,21 @@ model-viewer {
     position: absolute;
     top: 50%;
     width: max-content;
-    text-align: left;
+    text-align: center;
+    background-color: #333;
   }
 
   .HotspotAnnotation p {
-    color: #333;
+    color: #fff;
     line-height: 22px;
-    font-weight: 300;
+    font-weight: 200;
+    font-size: 12px;
   }
 
   .HotspotAnnotation h2 {
-    font-size: 18px;
-    margin-bottom: 5px;
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 4px;
   }
 
   .HotspotAnnotation img {
@@ -123,3 +126,8 @@ model-viewer {
   model-viewer > #ar-prompt > img {
     animation: circle 4s linear infinite;
   }
+
+.image-hotspot{
+  width: 100px;
+  border: 5px solid #fff;
+}
