--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,6 @@ model-viewer {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
   color: rgba(0, 0, 0, 0.8);
   display: block;
-  font-family: Futura, Helvetica Neue, sans-serif;
   font-size: 18px;
   font-weight: 700;
   left: calc(100% + 1em);
@@ -67,16 +66,18 @@ model-viewer {
 }
 
 .HotspotAnnotation p {
-  color: #fff;
+  color: #EEEEEE;
   line-height: 22px;
   font-weight: 200;
   font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .HotspotAnnotation h2 {
-  color: #fff;
+  color: #EEEEEE;
   font-size: 14px;
   margin-bottom: 4px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 
 .HotspotAnnotation img {
@@ -94,7 +95,7 @@ model-viewer::part(default-progress-bar) {
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 12px 50%;
-  background-color: #fff;
+  background-color: #efefef;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
