--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,1 +1,8 @@
 @use 'fonts';
+
+
+$primary-color: #0F0F0F;
+$body-text-color: #EEEEEE;
+$background-color: #efefef;
+$heading-font-family: Verdana, Arial, Helvetica, sans-serif;
+$body-font-family: Arial, Helvetica, sans-serif;
