--- a/sass/components/_ar-model.scss
+++ b/sass/components/_ar-model.scss
@@ -1,10 +1,13 @@
+@use '../abstracts/variables' as a;
+
+
 // Customize our own hotspot 
 
 model-viewer {
     width: auto;
     max-width: 1200px;
     height: 700px;
-    background-color: #efefef;
+    background-color: a.$background-color;
     margin: 0 auto;
   }
   
@@ -30,7 +33,6 @@ model-viewer {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     color: rgba(0, 0, 0, 0.8);
     display: block;
-    font-family: Futura, Helvetica Neue, sans-serif;
     font-size: 18px;
     font-weight: 700;
     left: calc(100% + 1em);
@@ -45,16 +47,18 @@ model-viewer {
   }
 
   .HotspotAnnotation p {
-    color: #fff;
+    color: a.$body-text-color;
     line-height: 22px;
     font-weight: 200;
     font-size: 12px;
+    font-family: a.$body-font-family;
   }
 
   .HotspotAnnotation h2 {
-    color: #fff;
+    color: a.$body-text-color;
     font-size: 14px;
     margin-bottom: 4px;
+    font-family: a.$heading-font-family;
   }
 
   .HotspotAnnotation img {
@@ -73,7 +77,7 @@ model-viewer {
     background-repeat: no-repeat;
     background-size: 20px 20px;
     background-position: 12px 50%;
-    background-color: #fff;
+    background-color: a.$background-color;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
