--- a/css/main.css
+++ b/css/main.css
@@ -169,4 +169,8 @@ model-viewer > #ar-prompt > img {
   text-align: center;
   margin-bottom: 30px;
   font-size: 30px;
+}
+
+.error-box {
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
