loading image was changed and only added to the materials section

--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,15 @@ model-viewer > #ar-prompt > img {
 
 .spinner-img {
   animation: rotation 6s infinite linear;
+  max-width: 700px;
+}
+
+.loading-box-2 {
+  text-align: center;
+}
+
+.loading-box-1 {
+  text-align: center;
 }
 
 @keyframes rotation {
